testdata/baselines/reference/compiler/deeplyNestedTupleTypes.errors.txt
deeplyNestedTupleTypes.tlua(4,11): error TS1110: Type expected.
deeplyNestedTupleTypes.tlua(7,9): error TS1110: Type expected.
deeplyNestedTupleTypes.tlua(10,11): error TS1110: Type expected.
deeplyNestedTupleTypes.tlua(17,11): error TS1110: Type expected.
deeplyNestedTupleTypes.tlua(20,9): error TS1110: Type expected.
deeplyNestedTupleTypes.tlua(23,11): error TS1110: Type expected.


==== deeplyNestedTupleTypes.tlua (6 errors) ====
    // https://github.com/microsoft/typescript-go/issues/3426
    
    type AOuter = {
      inners: [AInner];
              ~
!!! error TS1110: Type expected.
    };
    type AInner = {
      mids: [AMid];
            ~
!!! error TS1110: Type expected.
    };
    type AMid = {
      leaves: [ALeaf];
              ~
!!! error TS1110: Type expected.
    };
    type ALeaf = {
      id: string;
    };
    
    type BOuter = {
      inners: [BInner];
              ~
!!! error TS1110: Type expected.
    };
    type BInner = {
      mids: [BMid];
            ~
!!! error TS1110: Type expected.
    };
    type BMid = {
      leaves: [BLeaf];
              ~
!!! error TS1110: Type expected.
    };
    type BLeaf = {
      id: number;
    };
    
    function test(a: AOuter, b: BOuter) {
      a = b;
    }
    